--- a/order/templates/order/menu.html
+++ b/order/templates/order/menu.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block script %}
-    <script src="{% static 'order/menu.js' %}"></script>
+    <script type="module" src="{% static 'order/pages/menu.js' %}"></script>
 {% endblock %}
 
 {% block body %}
