--- a/order/templates/order/menu_item.html
+++ b/order/templates/order/menu_item.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block script %}
-    <script src="{% static 'order/item.js' %}"></script>
+    <script type="module" src="{% static 'order/pages/item.js' %}"></script>
 {% endblock %}
 
 {% block body %}
