Added order validation and submission. Introduced some features to modularise code and improve code organisation

--- a/order/static/order/styles.css
+++ b/order/static/order/styles.css
@@ -110,3 +110,10 @@ body {
     }
 }
 
+.modal.hidden {
+  display: none;
+}
+/* Add more styles to center the modal, background blur, etc. */
+
+
+
