--- a/order/templates/order/cart.html
+++ b/order/templates/order/cart.html
@@ -11,4 +11,13 @@
     <a href="{% url 'menu' %}">
         <button>See Menu</button>
     </a>
+    <div id="order-modal" class="modal hidden">
+    <div class="modal-content">
+    <h3>Place Your Order</h3>
+    <label for="student-name">Name:</label>
+    <input type="text" id="student-name" required>
+    <button id="confirm-order">Confirm Order</button>
+    <button id="cancel-order">Cancel</button>
+    </div>
+    </div>
 {% endblock %}
